--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+  <h1>Welcome to <span style="color: #ff4444;">DevLink</span> Bio</h1>
+  <h3 id="Intro">A membership site where entrepreneuers can meet developers.</h3>
+</div>
