--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </button>
       
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <i class="fa fa-users navbar-brand"></i>
+        <i class="fa fa-users"></i>
         DevLink Bio
       <% end %>
     </div>
