--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,20 +3,29 @@
     <% if params[:plan] == '3'%>
       <h1 class="text-center plan-name">Pro Account</h1>
       <p class ="text-center plan-name">Sign up for the pro account for $5/month and get access to contact information!</p>
-    <% else %>
+    <% elsif params[:plan] == '2' %>
       <h1 class="text-center plan-name">Basic Account</h1>
       <p class="text-center plan-name">Sign up for free and get basic access to the community.</p>
+    <% else %>
+      
     <% end %>
   </div>
   <div class="col-md-6 col-md-offset-3">
-    <div class ="well">
       <h2>Sign up</h2>
-      <% if params[:plan] == '2' %>
-        <%= render "basic_form" %>
+      <% if params[:plan] == '3' %>
+        <div class ="well">
+          <%= render "pro_form" %>
+        </div>
+        
+      <% elsif params[:plan] == '2' %>
+        <div class ="well">
+          <%= render "basic_form" %>
+        </div>
+        
       <% else %>
-        <%= render "pro_form" %>
+        <%= render "both_plan" %>
+        
       <% end %>
         <%= render "devise/shared/links" %>
-    </div>
   </div>
 </div>
