--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
+        <h2 id="contact">Contact us through Email</h2>
         <div class="well">
             <%= form_for @contact do |f| %>
                 <div class="form-group">
