Modified devise for stripe

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,9 +18,9 @@ background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, 
 
 h2.plan-name {
     padding: 10px;
-    color: #089131;
+    color: #9b422e;
     border: 5px solid #8026a0;
-    border-radius: 2px;
+    border-radius: 5px;
 }
 
 #Intro {
