Added profile model and table

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,9 +25,10 @@ background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, 
 
 h2.plan-name {
     padding: 10px;
-    color: #9b422e;
+    color: #00ff89;
     border: 5px solid #8026a0;
     border-radius: 5px;
+    background-color: #ce0383;
 }
 
 
