Added profile view action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
+
 <div class="jumbotron text-center">
   <h1>Welcome to <span style="color: #ff4444;">DevLink</span> Bio</h1>
   <h3 id="Intro">A membership site where entrepreneuers can meet developers.</h3>
