Added profiles form and create action

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,19 @@ h2.plan-name {
     background-color: #ce0383;
 }
 
+.description {
+    padding: 10px;
+    color: #00ff89;
+    border: 5px solid #8026a0;
+    border-radius: 5px;
+    background-color: #ce0383;
+    margin-bottom: 20px;
+}
+
+.description p {
+    color: #4fe7ff;
+    font-size: 18px;
+}
 
 .sign-up {
     color: #ff0048;
