Home page improvements

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,6 +49,17 @@ h2.plan-name {
     color: #ff0048;
 }
 
+/*.profile-link {
+    text-decoration: none;
+    font-size: 20px;
+    color: #a82c1c;
+}*/
+
+#community {
+    font-size: 15px;
+    color: #8602c9;
+}
+
 #Intro {
     color: #3ac122;
 }
