--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,49 @@
-<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-
 <div class="jumbotron text-center">
-  <h1>Welcome to <span style="color: #ff4444;">DevLink</span> Bio</h1>
-  <h3 id="Intro">A membership site where entrepreneuers can meet developers.</h3>
+  <% if user_signed_in? %>
+    <h1>Welcome <span style="color: #0c4299;">back</span>
+    to <span style="color: #ff4444;">DevLink</span> Bio</h1>
+    <h3 id="Intro">A membership site where entrepreneuers can meet developers.</h3>
+  <% else %>
+    <h1>Welcome to <span style="color: #ff4444;">DevLink</span> Bio</h1>
+    <h3 id="Intro">A membership site where entrepreneuers can meet developers.</h3>
+  <% end %>
 </div>
 <div class="row">
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Basic Membership</h2>
-      <h4 class="text-center">Sign up for free and get basic access to the community.</h4></br></br>
-      <%= link_to "Sign up with Basic!", new_user_registration_path(plan: @basic_plan.id),class: "btn btn-primary btn-lg btn-block" %>
+  <% if user_signed_in? %>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Your profile</h2>
+        <% if current_user.profile #If the user has a profile do this  %>
+          <%= link_to "Edit your profile!", "#", class: "btn btn-danger btn-block" %><br/>
+          <%= link_to "View your profile!", user_path(current_user), class: "btn btn-danger btn-block" %>
+        <% else %>  
+          <%= link_to "Create your profile!", new_user_profile_path(current_user) %>
+        <% end %>
+      </div>
     </div>
-  </div>
-  
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Pro Membership</h2>
-      <h4 class="text-center">Sign up for the pro account for $5/month and get access to contact information!</h4></br>
-      <%= link_to "Sign up with Pro!", new_user_registration_path(plan: @pro_plan.id),class: "btn btn-success btn-lg btn-block" %>
+    
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">The Community</h2>
+        <p id="community">Visit the community to meet other developers,entrepreneuers, and investors!</p>
+        <%= link_to "Visit the community", "#", class: "btn btn-success btn-block" %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic Membership</h2>
+        <h4 class="text-center">Sign up for free and get basic access to the community.</h4></br></br>
+        <%= link_to "Sign up with Basic!", new_user_registration_path(plan: @basic_plan.id),class: "btn btn-primary btn-lg btn-block" %>
+      </div>
+    </div>
+    
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro Membership</h2>
+        <h4 class="text-center">Sign up for the pro account for $5/month and get access to contact information!</h4></br>
+        <%= link_to "Sign up with Pro!", new_user_registration_path(plan: @pro_plan.id),class: "btn btn-success btn-lg btn-block" %>
+      </div>
+    </div>
+  <% end %>
 </div>
