--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3 description">
-        <h1 class="text-center">Create your own Profile</h1>
+        <h1 class="text-center">Edit your Profile</h1>
         <p class="text-center">Be part of the DevLink Bio community with your
         own customized profile!</p>
     </div>
