Added index action and updated links

--- a/app/assets/stylesheets/ids.css.scss
+++ b/app/assets/stylesheets/ids.css.scss
@@ -8,10 +8,11 @@
 
 #contact-info {
     color: #fff;
-    background-color: #d9534f;
-    border-color: #d43f3a;
+    background-color: #5bc0de;
+    border-color: #46b8da;
     display: inline-block;
     margin-bottom: 20px;
+    margin-left: 50px;
 }
 
 #description {
