--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
       <div class="well">
         <h2 class="text-center">The Community</h2>
         <p class="community">Visit the community to meet other developers,entrepreneuers, and investors!</p>
-        <%= link_to "Visit the community", "#", class: "btn btn-success btn-block" %>
+        <%= link_to "Visit the community", users_path, class: "btn btn-success btn-block" %>
       </div>
     </div>
   <% else %>
