Improved user edit profile page

--- a/app/assets/stylesheets/ids.css.scss
+++ b/app/assets/stylesheets/ids.css.scss
@@ -6,6 +6,11 @@
     color: #ad6400;
 }
 
+#unhappy {
+    font-size: 20px;
+    color: #0d7a43
+}
+
 #contact-info {
     color: #fff;
     background-color: #5bc0de;
