--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,12 @@
                                     <h2><%= u.profile.first_name %> <%= u.profile.last_name %></h2>
                                 <% end %>
                                 
-                                <p><%= u.profile.job_title %></p>
+                                <p>
+                                    <%= u.profile.job_title %>
+                                    <% if u.plan_id == 6 %>
+                                        <span class="label label-danger">Pro</span>
+                                    <% end %>
+                                </p>
                             </div>
                         </div>
                     </li>
