--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,12 @@
-<h2>About Us</h2>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        
+        <h1 class="main-header">About Us</h2><br/>
+        
+        <div class="well">
+            <strong><p>Welcome to Devlink Bio!!! We are a community of developers, entrepreneurs, and investors who
+            are interested meeting each other and sharing ideas.</p></strong>
+        </div>
+        
+    </div>
+</div>
