--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
     <h1>The Devlink Community</h1>
-    <p>Welcome to our community, users must fill out a profile in oreder to join</p>
+    <p>Welcome to our community, users must fill out a profile in order to join</p>
         <ul class="list-unstyled">
             <% @users.each do |u| %>
                 <% if u.profile %>
