--- a/app/assets/stylesheets/ids.css.scss
+++ b/app/assets/stylesheets/ids.css.scss
@@ -15,9 +15,10 @@
     color: #fff;
     background-color: #5bc0de;
     border-color: #46b8da;
-    display: inline-block;
-    margin-bottom: 20px;
-    margin-left: 50px;
+}
+
+#no-text-decoration {
+    text-decoration: none;
 }
 
 #description {
