--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,17 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <% if params[:plan] == '6' %>
-      <h1 class="text-center main-header">Pro Account</h1>
-      <h2 class ="text-center main-header">Sign up for the pro account for $5/month and get access to the community's contact information!</h2>
+      <div class="main-header">
+        <h1 class="text-center">Pro Account</h1>
+        <hr/>
+        <h2 class ="text-center small-font">Sign up for the pro account for $5/month and get access to the community's contact information!</h2>
+      </div>
     <% elsif params[:plan] == '2' %>
-      <h1 class="text-center main-header">Basic Account</h1>
-      <h2 class="text-center main-header">Sign up for free and get basic access to the community.</h2>
+      <div class="main-header">
+        <h1 class="text-center">Basic Account</h1>
+        <hr/>
+        <h2 class="text-center small-font">Sign up for free and get basic access to the community.</h2>
+      </div>
     <% else %>
       
     <% end %>
