--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>DevLink Bio</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://js.stripe.com/v2/"></script>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'https://js.stripe.com/v2/', type: 'text/javascript' %>
   <%= javascript_include_tag 'application' %>
   <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %> 
   <%= csrf_meta_tags %>
