--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <h2 id="contact">Contact us through Email</h2>
+        <h2 id="contact">Contact us through Email:</h2>
         <div class="well">
             <%= form_for @contact do |f| %>
                 <div class="form-group">
@@ -17,7 +17,7 @@
                     <%= f.label :comments %>
                     <%= f.text_area :comments, class: "form-control" %>
                 </div>
-                <%= f.submit "Submit", class: "btn btn-default"%>
+                <%= f.submit "Send", class: "btn btn-default"%>
             <% end %>
         </div>
     </div>
