--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -3,7 +3,8 @@
     <head>
     </head>
     <body>
-        <p>You have received a message from DevLink Bio's contact form, from <%= "#{@name}, #{@email}."%></p>
+        <h1>You have received a message from DevLink Bio's contact form, from <%= "#{@name}, #{@email}."%></h1>
+        
         <p><%= @body %></p>
     </body>
 </html>
