--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,8 @@
         <div class="alert alert-warning alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
-            Switch to <strong>Pro</strong> to have access to the community's contact info
+            Switch to <strong><%= link_to "Pro", edit_user_registration_path %></strong> to have access to the community's contact info.
+            1st go to the link and delete your account then, sign up for pro.
         </div>
     <% end %>
     
