--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>You have received a message from DevLink Bio's contact form, from <%= "#{@name}, #{@email}."%></h1>
+        <h6>You have received a message from DevLink Bio's contact form,<br/> from <%= "#{@name}, #{@email}."%></h6>
         
         <p><%= @body %></p>
     </body>
