--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h4 class="text-center">You have received a message from DevLink Bio's contact form.<br/>From <%= "#{@name}, #{@email}."%></h4>
+        <h4 class="text-center">You have received a message from DevLink Bio's contact form.<br/>From: <%= "#{@name}". %><br/>Email: <%= "#{@email}." %></h4>
         
         <p><%= @body %></p>
     </body>
